k8s-apps/k8s/manifests/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/load-balancer-name: lb-${TF_WORKSPACE}
    alb.ingress.kubernetes.io/group.name: lb-${TF_WORKSPACE}
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=${TF_WORKSPACE}
    alb.ingress.kubernetes.io/subnets: eks-${TF_WORKSPACE}-public-1, eks-${TF_WORKSPACE}-public-2
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: grafana
              port:
                number: 80
